# Air-Quality-Forecasting-Demo

./: .gitignore  .render.yaml  DBSCAN_scripts.ipynb  README.md  app.py  crawl.py  data_processor.py  lstm_main.py  mongo_pipeline.py  plot_prediction.py  prepare_data.ipynb  pyproject.toml  requirements.txt  test.py
Nghia_model/: eval.py  plot_prediction.py  prepare_data.ipynb  train.py
Nghia_model/ckpts/: xgboost_model_CO.pkl
Nghia_model/daily_crawl/: crawl.py  station_info.json
Nghia_model/data/: test.pt
Nghia_model/real-time-data/final-data/: real_time.pt
Nghia_model/real-time-data/preprocess/: HN_NguyenVanCu_28560877461938780203765592307.csv  dataset_info.json  prepare_data.ipynb  processed_HN_NguyenVanCu_28560877461938780203765592307.csv
ai_engine/: aqi_service.py
ai_engine/data/origin/: dataset_info.json
ai_engine/data/test/: BD_BinhDuong_HiepThanh_processed.csv  BD_HoaLu_QuyNhon_processed.csv  BD_TuyPhuoc_processed.csv  (+17 more)
ai_engine/encoders/: province_encoder.pkl  region_encoder.pkl  station_encoder.pkl
ai_engine/weights/: best_aqi_model_dual.pth
data/: HN_KDT_KK.csv  HN_NguyenVanCu_28560877461938780203765592307.csv  dataset_info.json  processed_HN_KDT_KK.csv  processed_HN_NguyenVanCu_28560877461938780203765592307.csv  real_time_v1.pt
kmeans/: app.py  clustering.py  evaluate.py  load_data.py  visualize.py
lstm_model/: configs.py  data_analysis.py  data_utils.py  model.py  unified_evaluation.py  visualize.py
lstm_preprocessing/: pipeline.py
results/: training_history.pkl
static/: vn.json
templates/: index.html  map.html
(+34 files in other folders)
