[project]
name = "timeseries-aqi-forecast-vietnam-province"
version = "0.1.0"
description = ""
authors = [
    {name = "khangbkk23",email = "khang.buitranduycse@hcmut.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
